# connecty

./: README.md  REFACTOR_SUMMARY.md  main.py  pyproject.toml  repro_icr.py  repro_icr_debug.py  reproduce_tension_issue.py  test_full_plot.py  test_plot_ideal.py  test_unified_check.py  test_units.py  verify_icr.py
documentation/: api.md  better weld.md  bolt.md  physics.md  start here.md  theory.md  user guide.md  weld.md  weldy.md
documentation/api/: api.md  weld.md
documentation/bolt/: bolt.md  standard.md  theory.md
documentation/general/: user guide.md
documentation/old api/: api.md
documentation/standards/: AISC 360-22.md  bolt.md  weld.md
documentation/theory/: bolt.md  stain compatabilty method.md  (+1 more)
examples/: base1.dxf  bolt.py  bolt_group_analysis.py  common_geometry.py  common_loads.py  example1_rhs_simple.py  example2_rhs_eccentric.py  example3_i_beam.py  example4_u_channel.py  example5_stress_components.py  example6_chs.py  example7_bolt_group.py  example7_icr_rhs_eccentric.py  example8_icr_rotation_trend.py  example9_comparison_plot.py  generate_gallery.py  good example.py  icr_rotation_eccentricity_trend.py  old bolt.py  pjp_weld_analysis.py  run_all_examples.py  run_bolt_examples.py  standard_sections_analysis.py  stress_components_analysis.py  weld.py  weld_method_comparison.py
testing/: conftest.py  test_auto_theta.py  test_bolt_connection_tension.py  test_bolt_tension_fix.py  test_stress_continuity.py  test_weld_3d_loading_vs_icr.py  test_weld_check_aisc.py  test_weld_directional_factor.py  test_weld_dxf_smoke.py  test_weld_elastic_out_of_plane.py  test_weld_icr_reject_out_of_plane.py  verify_elastic_method.py
(+111 files in other folders)
