[project]
name = "weldy"
version = "0.1.0"
description = "Weld stress analysis package for structural engineering"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sectiony",
    "matplotlib",
    "numpy",
]

[tool.uv.sources]
sectiony = { path = "../sectiony", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/weldy"]
