[project]
name = "connecty"
version = "0.1.0"
description = "Weld stress analysis package for structural engineering"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sectiony",
    "matplotlib",
    "numpy",
    "pytest>=9.0.1",
]

[tool.uv.sources]
connecty = { workspace = true }
sectiony = { path = "../sectiony", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "connecty",
]

[tool.hatch.build.targets.wheel]
packages = ["src/connecty"]
